--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
             </section>
             <!-- sezione 4 -->
             <section class="no-clearfix grey">
-                <h2></h2>
-                <p></p>
+                <h2>Teconologia affidabile per tenersi in contatto</h2>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                 <img src="./resources/img/item4-big.svg" alt="">
+                <h3>Pronto a iniziare la tua avventura?</h3>
+                <span id="mac-2"><i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</span>
             </section>
         </div>
     </main>
