--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                 <img src="./resources/img/item4-big.svg" alt="">
                 <h3>Pronto a iniziare la tua avventura?</h3>
-                <span id="mac-2"><i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</span>
+                <span id="mac-2"><i class="fas fa-long-arrow-alt-down arrow-mac-2"></i>Scarica per Mac</span>
             </section>
         </div>
     </main>
@@ -91,10 +91,56 @@
             <!-- sezione 1 footer -->
             <div class="footer-nav">
                 <div class="col-sx">
-
+                    <h3>Il tuo posto per parlare</h3>
+                    <img src="./resources/img/ita.png" alt="">
+                    <span>Italiano<i class="fas fa-chevron-square-down"></i></span>
+                    <div class="social">
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
                 </div>
                 <div class="col-dx">
-
+                    <div class="colonne">
+                        <div class="col-footer">
+                            <h5>Prodotto</h5>
+                            <a href="">Scarica</a>
+                            <a href="">Perché Discord</a>
+                            <a href="">Nitro</a>
+                            <a href="">Sicurezza</a>
+                            <a href="">Assistenza</a>
+                        </div>
+                        <div class="col-footer">
+                            <h5>Compagnia</h5>
+                            <a href="">Chi siamo</a>
+                            <a href="">Lavora con noi</a>
+                            <a href="">Marchio</a>
+                            <a href="">Redazione</a>
+                            <a href="">Negozio</a>
+                        </div>
+                        <div class="col-footer">
+                            <h5>Risorse</h5>  <a href="">Scarica</a>
+                            <a href="">Perché Discord</a>
+                            <a href="">Nitro</a>
+                            <a href="">Sicurezza</a>
+                            <a href="">Assistenza</a>
+                            <a href="">Scarica</a>
+                            <a href="">Perché Discord</a>
+                            <a href="">Nitro</a>
+                            <a href="">Sicurezza</a>
+                            <a href="">Assistenza</a>
+                            <a href="">Assistenza</a>          
+                        </div>
+                        <div class="col-footer">
+                            <h5>Norme</h5>
+                            <a href="">Scarica</a>
+                            <a href="">Perché Discord</a>
+                            <a href="">Nitro</a>
+                            <a href="">Sicurezza</a>
+                            <a href="">Assistenza</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- sezione 2 footer -->
