parte finale footer completata

--- a/index.html
+++ b/index.html
@@ -15,21 +15,15 @@
         <div class="centered">
             <!-- barra navigazione -->
             <nav>
-                <div class="col-side">
-                    <img src="./resources/img/logo.svg" alt="logo Discord">
-                </div>
-                <div class="col-center">
-                    <ul>
-                        <li><a href="">Scarica</a></li>
-                        <li><a href="">Perché Discord</a></li>
-                        <li><a href="">Nitro</a></li>
-                        <li><a href="">Sicurezza</a></li>
-                        <li><a href="">Assistenza</a></li>
-                    </ul>
-                </div>
-                <div class="col-side">
-                    <button><a href="">Accedi</a></button>
-                </div>
+                <img src="./resources/img/logo.svg" alt="logo Discord">
+                <ul>
+                    <li><a href="">Scarica</a></li>
+                    <li><a href="">Perché Discord</a></li>
+                    <li><a href="">Nitro</a></li>
+                    <li><a href="">Sicurezza</a></li>
+                    <li><a href="">Assistenza</a></li>
+                </ul>
+                <a href="">Accedi</a>
             </nav>
             <!-- banner -->
             <section>
@@ -145,7 +139,8 @@
             </div>
             <!-- sezione 2 footer -->
             <section>
-
+                    <img src="./resources/img/logo.svg" alt="">
+                    <a href="">Registrati</a>
             </section>
         </div>
     </footer>
