esercizio terminato da revisionare

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="">Sicurezza</a></li>
                     <li><a href="">Assistenza</a></li>
                 </ul>
-                <a href="">Accedi</a>
+                <a id ="accedi" href="">Accedi</a>
             </nav>
             <!-- banner -->
             <section>
