--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
     <!-- blocco principale pagina -->
     <main>
-        <div class="centered">
-            <!-- sezione 1 -->
-            <section>
+        <!-- sezione 1 -->
+        <section>
+            <div class="centered">
                 <div class="col col-1">
                     <img src="./resources/img/item1.svg" alt="">
                 </div>
@@ -47,9 +47,11 @@
                     <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
                     <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                 </div>
-            </section>
-            <!-- sezione 2 -->
-            <section class="grey">
+            </div>
+        </section>
+        <!-- sezione 2 -->
+        <section class="grey">
+            <div class="centered">
                 <div class="col col-2">
                     <h2>Dove trovarsi è facile</h2>
                     <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
@@ -57,9 +59,11 @@
                 <div class="col col-1">
                     <img src="./resources/img/item2.svg" alt="">
                 </div>
-            </section>
-            <!-- sezione 3 -->
-            <section>
+            </div>
+        </section>
+        <!-- sezione 3 -->
+        <section>
+            <div class="centered">
                 <div class="col col-1">
                     <img src="./resources/img/item3.svg" alt="">
                 </div>
@@ -67,16 +71,20 @@
                     <h2>Da pochi a un fandom</h2>
                     <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
                 </div>
-            </section>
-            <!-- sezione 4 -->
-            <section class="no-clearfix grey">
+            </div>
+        </section>
+        <!-- sezione 4 -->
+        <section class="no-clearfix grey">
+            <div class="centered">
                 <h2>Teconologia affidabile per tenersi in contatto</h2>
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                 <img src="./resources/img/item4-big.svg" alt="">
-                <h3>Pronto a iniziare la tua avventura?</h3>
+                <div id="stars">
+                    <h3>Pronto a iniziare la tua avventura?</h3>
+                </div>
                 <span id="mac-2"><i class="fas fa-long-arrow-alt-down arrow-mac-2"></i>Scarica per Mac</span>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
 
     <!-- footer -->
