--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="./resources/img/logo.svg" alt="logo Discord">
                 <ul>
                     <li><a href="">Scarica</a></li>
-                    <li><a href="">Perché Discord</a></li>
+                    <li><a href="">Perch&eacute; Discord</a></li>
                     <li><a href="">Nitro</a></li>
                     <li><a href="">Sicurezza</a></li>
                     <li><a href="">Assistenza</a></li>
@@ -28,9 +28,9 @@
             <!-- banner -->
             <section>
                 <h1>Il tuo posto per parlare</h1>
-                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passate il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
-                <span id="mac"><i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</span>
-                <span id="browser">Apri Discord nel tuo browser</span>
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunit&agrave; artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passate il tempo assieme, Discord rende pi&ugrave; facile chiacchierare ogni giorno e ritrovarsi pi&ugrave; spesso.</p>
+                <span id="mac"><a href=""><i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</a></span>
+                <span id="browser"><a href="">Apri Discord nel tuo browser</a></span>
             </section>
         </div>
     </header>
@@ -53,8 +53,8 @@
         <section class="grey">
             <div class="centered">
                 <div class="col col-2">
-                    <h2>Dove trovarsi è facile</h2>
-                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+                    <h2>Dove trovarsi &egrave; facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei l&igrave; e unirsi istantaneamente senza dover chiamare.</p>
                 </div>
                 <div class="col col-1">
                     <img src="./resources/img/item2.svg" alt="">
@@ -82,7 +82,7 @@
                 <div id="stars">
                     <h3>Pronto a iniziare la tua avventura?</h3>
                 </div>
-                <span id="mac-2"><i class="fas fa-long-arrow-alt-down arrow-mac-2"></i>Scarica per Mac</span>
+                <span id="mac-2"><a href=""><i class="fas fa-long-arrow-alt-down arrow-mac-2"></i>Scarica per Mac</a></span>
             </div>
         </section>
     </main>
@@ -95,12 +95,12 @@
                 <div class="col-sx">
                     <h3>Il tuo posto per parlare</h3>
                     <img src="./resources/img/ita.png" alt="">
-                    <span>Italiano<i class="fas fa-chevron-square-down"></i></span>
+                    <span>Italiano</span>
                     <div class="social">
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-facebook"></i>
-                        <i class="fab fa-youtube"></i>
+                        <a href=""><i class="fab fa-twitter"></i></a>
+                        <a href=""><i class="fab fa-instagram"></i></a>
+                        <a href=""><i class="fab fa-facebook"></i></a>
+                        <a href=""><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
                 <div class="col-dx">
@@ -108,7 +108,7 @@
                         <div class="col-footer">
                             <h5>Prodotto</h5>
                             <a href="">Scarica</a>
-                            <a href="">Perché Discord</a>
+                            <a href="">Perch&eacute; Discord</a>
                             <a href="">Nitro</a>
                             <a href="">Sicurezza</a>
                             <a href="">Assistenza</a>
@@ -123,12 +123,12 @@
                         </div>
                         <div class="col-footer">
                             <h5>Risorse</h5>  <a href="">Scarica</a>
-                            <a href="">Perché Discord</a>
+                            <a href="">Perch&eacute; Discord</a>
                             <a href="">Nitro</a>
                             <a href="">Sicurezza</a>
                             <a href="">Assistenza</a>
                             <a href="">Scarica</a>
-                            <a href="">Perché Discord</a>
+                            <a href="">Perch&eacute; Discord</a>
                             <a href="">Nitro</a>
                             <a href="">Sicurezza</a>
                             <a href="">Assistenza</a>
@@ -137,7 +137,7 @@
                         <div class="col-footer">
                             <h5>Norme</h5>
                             <a href="">Scarica</a>
-                            <a href="">Perché Discord</a>
+                            <a href="">Perch&eacute; Discord</a>
                             <a href="">Nitro</a>
                             <a href="">Sicurezza</a>
                             <a href="">Assistenza</a>
